# AccountingProject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
header/: Account.h  AccountDisplayer.h  AccountLibrary.h  AccountModification.h  AccountRecords.h  Accounts.h  AssetAccount.h  ContraAssetAccount.h  ContraEquityAccount.h  ContraExpenseAccount.h  ContraLiabilityAccount.h  ContraRevenueAccount.h  Date.h  DividendsAccount.h  ExpenseAccount.h  GainAccount.h  Journal.h  JournalEntry.h  JournalEntryCreator.h  JournalEntryPoster.h  JournalModification.h  JournalModificationCreator.h  LedgerModification.h  LiabilityAccount.h  LossAccount.h  MonthRecords.h  Period.h  ProgramManager.h  PrototypeFileReader.h  PrototypeFileWriter.h  QuarterRecords.h  RevenueAccount.h  StockholdersEquityAccount.h  ValueType.h  YearRecords.h
src/: Account.cpp  AccountDisplayer.cpp  AccountLibrary.cpp  AccountModification.cpp  AccountRecords.cpp  AssetAccount.cpp  ContraAssetAccount.cpp  ContraEquityAccount.cpp  ContraExpenseAccount.cpp  ContraLiabilityAccount.cpp  ContraRevenueAccount.cpp  Date.cpp  DividendsAccount.cpp  ExpenseAccount.cpp  GainAccount.cpp  Journal.cpp  JournalEntry.cpp  JournalEntryCreator.cpp  JournalEntryPoster.cpp  JournalModification.cpp  JournalModificationCreator.cpp  LedgerModification.cpp  LiabilityAccount.cpp  LossAccount.cpp  MonthRecords.cpp  Period.cpp  ProgramManager.cpp  PrototypeFileReader.cpp  PrototypeFileWriter.cpp  QuarterRecords.cpp  RevenueAccount.cpp  StockholdersEquityAccount.cpp  ValueType.cpp  YearRecords.cpp  main.cpp
test/: AccountLibraryTests.cpp  AccountModificationTests.cpp  AccountRecordsTests.cpp  AccountTests.cpp  AssetAccountTests.cpp  CMakeLists.txt  ContraAssetTests.cpp  ContraEquityTests.cpp  ContraExpenseTests.cpp  ContraLiabilityTests.cpp  ContraRevenueTests.cpp  DateTests.cpp  DividendsTests.cpp  ExpenseTests.cpp  GainAccountTests.cpp  JournalEntryCreatorTests.cpp  JournalEntryPosterTests.cpp  JournalEntryTests.cpp  JournalModificationCreatorTests.cpp  JournalModificationTests.cpp  JournalTests.cpp  LedgerModificationTests.cpp  LiabilityAccountTests.cpp  LossAccountTests.cpp  MonthRecordsTests.cpp  PeriodTests.cpp  ProgramManagerTests.cpp  QuarterRecordsTests.cpp  RevenueTests.cpp  StockholdersEquityTests.cpp  YearRecordsTests.cpp
test/manualtests/: CMakeLists.txt  main.cpp
