CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
ADD_SUBDIRECTORY(googletest)

ADD_EXECUTABLE(AccountingTests
    DateTests.cpp
    ../src/Date.cpp
    PeriodTests.cpp
    ../src/Period.cpp
    ValueTypeTests.cpp
    ../src/ValueType.cpp
    AccountModificationTests.cpp
    ../src/AccountModification.cpp
    JournalModificationTests.cpp
    ../src/JournalModification.cpp
    LedgerModificationTests.cpp
    ../src/LedgerModification.cpp
    AccountRecordsTests.cpp
    ../src/AccountRecords.cpp
    MonthRecordsTests.cpp
    ../src/MonthRecords.cpp
    QuarterRecordsTests.cpp
    ../src/QuarterRecords.cpp
    YearRecordsTests.cpp
    ../src/YearRecords.cpp
    AccountTests.cpp
    ../src/Account.cpp
    AssetAccountTests.cpp
    ../src/AssetAccount.cpp
    LiabilityAccountTests.cpp
    ../src/LiabilityAccount.cpp
    StockholdersEquityTests.cpp
    ../src/StockholdersEquityAccount.cpp
    RevenueTests.cpp
    ../src/RevenueAccount.cpp
    ExpenseTests.cpp
    ../src/ExpenseAccount.cpp
    GainAccountTests.cpp
    ../src/GainAccount.cpp
    LossAccountTests.cpp
    ../src/LossAccount.cpp
    DividendsTests.cpp
    ../src/DividendsAccount.cpp
    ContraAssetTests.cpp
    ../src/ContraAssetAccount.cpp
    ContraLiabilityTests.cpp
    ../src/ContraLiabilityAccount.cpp
    ContraEquityTests.cpp
    ../src/ContraEquityAccount.cpp
    ContraRevenueTests.cpp
    ../src/ContraRevenueAccount.cpp
    ContraExpenseTests.cpp
    ../src/ContraExpenseAccount.cpp
    AccountLibraryTests.cpp
    ../src/AccountLibrary.cpp
    JournalEntryTests.cpp
    ../src/JournalEntry.cpp
    JournalTests.cpp
    ../src/Journal.cpp
    JournalEntryPosterTests.cpp
    ../src/JournalEntryPoster.cpp
    JournalModificationCreatorTests.cpp
    ../src/JournalModificationCreator.cpp
    JournalEntryCreatorTests.cpp
    ../src/JournalEntryCreator.cpp
)

target_link_libraries(AccountingTests gmock gtest gtest_main)